# ml-framework-snapshots

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  USAGE.md  action.yml  pyproject.toml  pytest.ini  requirements-frameworks.txt  requirements.txt  test-requirements.txt
.github/workflows/: bot.yml  ci.yml  release.yml
scripts/: matrix_runner.py  update_shields.py
src/ml_framework_snapshots/: __init__.py  api.py  cli.py  compliance.py  diff.py  export.py  models.py  stubs.py  utils.py
src/ml_framework_snapshots/frameworks/: __init__.py  deepspeed.py  flax_nnx.py  huggingface.py  jax.py  keras.py  mlx.py  numpy.py  onnxruntime.py  optax_shim.py  orbax_checkpoint.py  pax.py  sklearn.py  tensorflow.py  torch.py  triton.py
tests/: test_api.py  test_api_aliases.py  test_c_extension_sig.py  test_cli.py  test_cli_check.py  test_compliance.py  test_compliance_more.py  test_coverage_gaps.py  test_coverage_patch2.py  test_coverage_patch3.py  test_delegation.py  test_diff.py  test_export.py  test_frameworks.py  test_high_perf.py  test_huggingface.py  test_models.py  test_models_cdd.py  test_models_decorators.py  test_models_decorators2.py  test_models_env_tags.py  test_models_forwardref.py  test_models_overload.py  test_models_sanitize.py  test_resolve_snapshot_path.py  test_stubs.py  test_stubs_sanitize.py  test_utils_coverage.py
