[project]
name = "ml_framework_snapshots"
version = "0.1.0"
description = "Extracts API snapshots from ML frameworks for Ghost Mode operation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "griffe>=1.0.0",
    "cdd @ git+https://github.com/offscale/cdd-python.git@master",
]

[project.optional-dependencies]
frameworks = [
    "torch>=2.0.0",
    "jax>=0.4.0",
    "tensorflow>=2.10.0",
    "keras>=3.0.0",
    "mlx>=0.10.0",
    "flax>=0.8.0",
]

[project.scripts]
ml_framework_snapshots = "ml_framework_snapshots.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
ignore_missing_imports = true
strict = true
warn_unused_ignores = false
exclude = [
    "^tests/",
    "^scripts/"
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.venv_311",
    "/.venv*",
    "/snapshots",
    "/test_out",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ml_framework_snapshots"]

[tool.ruff]
exclude = ["tests", "scripts", "add_docstrings.py", "fix_tests_typing.py"]
lint.select = ["E", "F", "D"]
lint.ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"scripts/**/*.py" = ["D"]
